// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlankLink when no properties are set matches snapshot 1`] = `
<a
  className={null}
  rel="noopener noreferrer"
  tabIndex="0"
  target="_blank"
/>
`;

exports[`BlankLink when properties are set matches snapshot 1`] = `
<a
  className="qux"
  href="http://google.com"
  rel="noopener noreferrer"
  tabIndex="0"
  target="_blank"
  title="bar"
>
  foo
</a>
`;
